# tauri-training

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js
src-tauri/: tauri.conf.json
src/routes/: +layout.js
tauri-training/: README.md  package.json  pnpm-lock.yaml
tauri-training/src-tauri/: Cargo.toml  tauri.conf.json
tauri-training/src-tauri/src/: main.rs
tauri-training/src/routes/todo/: +page.svelte
