[package]
name = "tauri-training"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_training_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# https://crates.io/crates/tauri-build/versions
tauri-build = "2.0.1"

[dependencies]
# https://crates.io/crates/tauri/versions
tauri = { version = "2.0.1" }

# https://crates.io/crates/tauri-plugin-shell/versions
tauri-plugin-shell = "2.0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

